--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Greenbike</string>
     <string name="title_activity_device_list">DeviceListActivity</string>
-    <string name="speech_prompt">Say something&#8230;</string>
-    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
-    <string name="tap_on_mic">Tap on mic to speak</string>
+    <string name="speech_prompt">Bir şeyler söyleyin&#8230;</string>
+    <string name="speech_not_supported">Üzgünüm! Cihazınız sesle yazımı desteklememektedir.</string>
+    <string name="tap_on_mic">Konuşmak için dokun</string>
 </resources>
